# kagura

./: Cargo.toml  flake.nix
lib/cloudflare-ddns/: Cargo.toml
lib/cloudflare-ddns/src/: lib.rs  model.rs
lib/ikuai/: Cargo.toml
lib/ikuai/src/: lib.rs  model.rs
src/: config.rs  main.rs
