[package]
name = "ikuai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
config = "0.14.0"
dotenv = "0.15.0"
md5 = "0.7.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.199"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
